2007-07-05  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): don't
	count the number of repeated messages when the error messages are
	being redirected to stderr already.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* app/xcf/xcf-read.c (xcf_read_int32) (xcf_read_int8): return the
	number of bytes that have been read from the file.

	* app/xcf/xcf-load.c (xcf_load_prop): return FALSE when reading fails.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb.pl (arg_parse): allow the use of constants when
	specifying limits for a PDB type.

	* tools/pdbgen/pdb/channel.pdb
	* tools/pdbgen/pdb/image.pdb
	* tools/pdbgen/pdb/layer.pdb: use GIMP_MAX_IMAGE_SIZE as limit for
	image and drawable sizes.

	* tools/pdbgen/pdb/selection_tools.pdb: added missing include.

	* app/pdb/channel_cmds.c
	* app/pdb/image_cmds.c
	* app/pdb/layer_cmds.c
	* app/pdb/selection_tools_cmds.c: regenerated.

2007-07-05  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_corner): changed
	the highlighting of the side handles to follow changes in the
	specification.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw): cosmetics.

2007-07-05  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/psp.c (read_layer_block): allow layer dimensions
	larger than 32768 while still checking for integer overflows.

2007-07-04  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/pnm.c (load_image)
	* plug-ins/common/psp.c (read_layer_block)
	* plug-ins/common/sunras.c (load_image)
	* plug-ins/common/xbm.c (load_image)
	* plug-ins/common/xwd.c (load_image): validate size values read
	from files before using them to allocate memory (bug #451379,
	thanks to Sean Larsson of iDefense Labs).

2007-07-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/psd-load.c: validate size values read from files
	before using them to allocate memory.

2007-07-04  Mukund Sivaraman  <muks@mukund.org>
