@@ -1,3 +1,15 @@
+2007-07-05  Raphaël Quinet  <raphael@gimp.org>
+
+	* plug-ins/common/psd-load.c (do_layer_record): check for invalid
+	number of channels in a layer.
+
+	* plug-ins/common/pcx.c (load_image): check for invalid image
+	width or height.
+
+	* plug-ins/bmp/bmpread.c: check for invalid image width or height,
+	return if the image could not be read instead of trying to set the
+	resolution or to flip a non-existing image.
+
 2007-07-05  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): don't
